# agora

./: CLAUDE.md  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.df/: test_task12_validation.py  test_task18_simple.py  test_task18_validation.py
backend/: pyproject.toml
backend/src/agora/: __main__.py  agent.py  cli.py  config.py  discussion.py  memory.py  ollama_client.py  persona.py  prompts.py  utils.py
backend/src/agora/api/: __init__.py  models.py  server.py
backend/src/agora/api/routes/: agents.py  discussions.py  personas.py  ws.py
data/agents/: ada.md  dante.md  marcus.md  sophia.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: agents.ts  client.ts  discussions.ts  personas.ts  types.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/agents/: MemoryTimeline.tsx
frontend/src/components/discussions/: AgentAvatar.tsx  AgentSelector.tsx  DiscussionCard.tsx  MessageBubble.tsx  RoundDivider.tsx  ThinkingIndicator.tsx  TranscriptView.tsx  UserInput.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/personas/: PersonaCard.tsx  PersonaForm.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ColumnDivider.tsx  HealthBanner.tsx  Input.tsx  Modal.tsx  Select.tsx  Skeleton.tsx  Slider.tsx  Spinner.tsx  Textarea.tsx  Toast.tsx  index.ts
frontend/src/contexts/: ToastContext.tsx
frontend/src/hooks/: useHealth.ts  useToast.ts  useWebSocket.ts
frontend/src/pages/: AgentAsk.tsx  AgentMemory.tsx  DiscussionNew.tsx  DiscussionView.tsx  Discussions.tsx  Home.tsx  PersonaCreate.tsx  PersonaDetail.tsx  Personas.tsx
plugin/: CLAUDE.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: aaru-segment.md
plugin/skills/discuss/starters/: friedrich-wilhelm-nietzsche.md
plugin/skills/list/: SKILL.md
plugin/skills/persona/: SKILL.md
plugin/skills/population/: SKILL.md
plugin/skills/simulate/: SKILL.md
plugin/skills/simulate/starters/: tech-early-adopters.md
plugins/agora/.claude-plugin/: plugin.json
plugins/agora/agents/: agora-persona.md
plugins/agora/skills/ask/: SKILL.md
skills/ask/: SKILL.md
skills/discuss/: SKILL.md
skills/discuss/starters/: ada-lovelace.md
skills/simulate/starters/: us-consumers.md
src/agora/: __init__.py  __main__.py  agent.py  cli.py  discussion.py  memory.py  ollama_client.py  persona.py  prompts.py  reflection.py  utils.py
(+9 files in other folders)
