[project]
name = "agora"
version = "0.1.0"
description = "A local CLI discussion forum powered by AI agents"
requires-python = ">=3.11"
dependencies = [
    "httpx",
]

[project.scripts]
agora = "agora.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agora"]
