[project]
name = "agora"
version = "0.1.0"
description = "A local CLI discussion forum powered by AI agents"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[project.scripts]
agora = "agora.cli:main"
agora-api = "agora.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agora"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "F",      # Pyflakes — unused imports, undefined names
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort — import sorting
    "N",      # pep8-naming
    "UP",     # pyupgrade — modernize syntax
    "B",      # flake8-bugbear — common bug patterns
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long — handled by formatter
    "SIM108", # Use ternary — explicit if/else often clearer
]

[tool.ruff.lint.per-file-ignores]
"src/agora/prompts.py" = ["E501"]
"backend/.df/*" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["agora"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["agora.utils", "agora.ollama_client", "agora.config"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["agora.memory", "agora.persona"]
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["agora.prompts", "agora.cli", "agora.discussion", "agora.reflection", "agora.agent"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["agora.api", "agora.api.*"]
disallow_untyped_defs = false
